[gd_scene load_steps=3 format=2]

[ext_resource path="res://Neuron.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 95.5, 49.5 )

[node name="Neuron" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="State" type="ColorRect" parent="."]
margin_right = 188.0
margin_bottom = 95.0
color = Color( 0.960784, 0.92549, 0.929412, 1 )

[node name="Handle" type="Button" parent="."]
margin_left = 7.0
margin_top = 5.0
margin_right = 186.0
margin_bottom = 25.0

[node name="SpikesLabel" type="RichTextLabel" parent="."]
margin_left = 71.0
margin_top = 80.0
margin_right = 130.0
margin_bottom = 96.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Spikes:"

[node name="Spike_Count" type="RichTextLabel" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 178.0
margin_bottom = 99.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="Name" type="RichTextLabel" parent="."]
margin_left = 6.0
margin_top = 62.0
margin_right = 263.0
margin_bottom = 82.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="RulePreview" type="TextEdit" parent="."]
margin_left = 6.0
margin_top = 31.0
margin_right = 184.0
margin_bottom = 60.0
readonly = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 94.5, 47.5 )
shape = SubResource( 1 )

[connection signal="button_down" from="Handle" to="." method="_on_Handle_button_down"]
[connection signal="button_up" from="Handle" to="." method="_on_Handle_button_up"]
